# serializer version: 1
# name: TestTrajectory.test_correct_periodic
  [[14.6 10.9  9.8]
   [14.4 10.8  9.6]
   [14.5 11.0  9.7]
   ...
   [13.2 14.4  5.8]
   [ 9.9  9.4 12.1]
   [25.6 22.7  3.5]]
# ---
# name: TestTrajectory.test_dssp
  AttributeArray(name='sec_struct', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(10273,), dtype=int32)
  array([3, 3, 3, ..., 0, 0, 0], dtype=int32)
# ---
# name: TestTrajectory.test_dssp.1
  AttributeArray(name='sec_struct', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(10273,), dtype=int32)
  array([3, 3, 3, ..., 0, 0, 0], dtype=int32)
# ---
# name: TestTrajectory.test_dssp.2
  AttributeArray(name='sec_struct', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(10273,), dtype=int32)
  array([3, 3, 3, ..., 0, 0, 0], dtype=int32)
# ---
# name: TestTrajectory.test_save_persistance
  [[ 3.9  2.8  4.9]
   [ 3.8  2.7  4.9]
   [ 3.8  2.8  4.9]
   ...
   [13.0  3.3  5.7]
   [13.0  3.6  5.8]
   [13.0  3.5  5.8]]
# ---
# name: TestTrajectory.test_trajectory_update
  AttributeArray(name='position', object='TestTrajectoryUpdate', mesh='TestTrajectoryUpdate', domain=POINT, type=FLOAT_VECTOR, shape=(10273, 3), dtype=float32)
  array([[ 3.918    ,  2.8980005,  4.846    ],
         [ 3.9280002,  2.8290002,  4.918    ],
         [ 3.8480003,  2.8730001,  4.7780004],
         ...,
         [13.074    ,  3.377    ,  5.838001 ],
         [13.069    ,  3.6280003,  5.8320003],
         [13.123001 ,  3.6460004,  5.7550006]], dtype=float32)
# ---
# name: TestTrajectory.test_trajectory_update.1
  AttributeArray(name='position', object='TestTrajectoryUpdate', mesh='TestTrajectoryUpdate', domain=POINT, type=FLOAT_VECTOR, shape=(10273, 3), dtype=float32)
  array([[ 3.8730004,  2.7580001,  4.933    ],
         [ 3.8209999,  2.707    ,  4.8640003],
         [ 3.8300004,  2.848    ,  4.949001 ],
         ...,
         [12.967002 ,  3.3150003,  5.692001 ],
         [12.990001 ,  3.5940003,  5.756    ],
         [13.0390005,  3.5300004,  5.8090005]], dtype=float32)
# ---
# name: test_martini[pent/TOPOL2.pdb]
  AttributeArray(name='.select_vert', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=BOOLEAN, shape=(11350,), dtype=bool)
  array([ True,  True,  True, ...,  True,  True,  True], dtype=bool)
# ---
# name: test_martini[pent/TOPOL2.pdb].1
  AttributeArray(name='atom_id', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([    1,     2,     3, ..., 11358, 11359, 11360], dtype=int32)
# ---
# name: test_martini[pent/TOPOL2.pdb].10
  AttributeArray(name='is_lipid', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=BOOLEAN, shape=(11350,), dtype=bool)
  array([False, False, False, ..., False, False, False], dtype=bool)
# ---
# name: test_martini[pent/TOPOL2.pdb].11
  AttributeArray(name='is_nucleic', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=BOOLEAN, shape=(11350,), dtype=bool)
  array([False, False, False, ..., False, False, False], dtype=bool)
# ---
# name: test_martini[pent/TOPOL2.pdb].12
  AttributeArray(name='is_peptide', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=BOOLEAN, shape=(11350,), dtype=bool)
  array([ True,  True,  True, ..., False, False, False], dtype=bool)
# ---
# name: test_martini[pent/TOPOL2.pdb].13
  AttributeArray(name='is_solvent', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=BOOLEAN, shape=(11350,), dtype=bool)
  array([False, False, False, ..., False, False, False], dtype=bool)
# ---
# name: test_martini[pent/TOPOL2.pdb].14
  AttributeArray(name='mass', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=FLOAT, shape=(11350,), dtype=float32)
  array([10.811, 32.06 , 10.811, ..., 14.007, 14.007, 14.007], dtype=float32)
# ---
# name: test_martini[pent/TOPOL2.pdb].15
  AttributeArray(name='occupancy', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=FLOAT, shape=(11350,), dtype=float32)
  array([1., 1., 1., ..., 1., 1., 1.], dtype=float32)
# ---
# name: test_martini[pent/TOPOL2.pdb].16
  AttributeArray(name='position', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=FLOAT_VECTOR, shape=(11350, 3), dtype=float32)
  array([[16.562    , 13.041    ,  9.823001 ],
         [16.646    , 13.150001 , 10.121001 ],
         [16.619001 , 12.694    ,  9.965    ],
         ...,
         [20.666    ,  4.5930004, 18.026001 ],
         [ 0.522    ,  1.0690001, 11.598001 ],
         [13.804001 , 17.212    , 12.453002 ]], dtype=float32)
# ---
# name: test_martini[pent/TOPOL2.pdb].17
  AttributeArray(name='res_id', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([   1,    1,    2, ..., 9197, 9198, 9199], dtype=int32)
# ---
# name: test_martini[pent/TOPOL2.pdb].18
  AttributeArray(name='res_name', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([12, 12, 12, ..., -1, -1, -1], dtype=int32)
# ---
# name: test_martini[pent/TOPOL2.pdb].19
  AttributeArray(name='segid', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([0, 0, 0, ..., 5, 5, 5], dtype=int32)
# ---
# name: test_martini[pent/TOPOL2.pdb].2
  AttributeArray(name='atom_name', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([-1, -1, -1, ..., -1, -1, -1], dtype=int32)
# ---
# name: test_martini[pent/TOPOL2.pdb].20
  AttributeArray(name='sharp_face', object='NewUniverseObject', mesh='NewUniverseObject', domain=FACE, type=BOOLEAN, shape=(0,), dtype=bool)
  array([], dtype=bool)
# ---
# name: test_martini[pent/TOPOL2.pdb].21
  AttributeArray(name='ures_id', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([   0,    0,    1, ..., 5407, 5408, 5409], dtype=int32)
# ---
# name: test_martini[pent/TOPOL2.pdb].22
  AttributeArray(name='vdw_radii', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=FLOAT, shape=(11350,), dtype=float32)
  array([0.192, 0.18 , 0.192, ..., 0.155, 0.155, 0.155], dtype=float32)
# ---
# name: test_martini[pent/TOPOL2.pdb].3
  AttributeArray(name='atom_types', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([0, 2, 0, ..., 1, 1, 1], dtype=int32)
# ---
# name: test_martini[pent/TOPOL2.pdb].4
  AttributeArray(name='atomic_number', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([ 5, 16,  5, ...,  7,  7,  7], dtype=int32)
# ---
# name: test_martini[pent/TOPOL2.pdb].5
  AttributeArray(name='b_factor', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=FLOAT, shape=(11350,), dtype=float32)
  array([0., 0., 0., ..., 0., 0., 0.], dtype=float32)
# ---
# name: test_martini[pent/TOPOL2.pdb].6
  AttributeArray(name='chain_id', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([1, 1, 1, ..., 0, 0, 0], dtype=int32)
# ---
# name: test_martini[pent/TOPOL2.pdb].7
  AttributeArray(name='charge', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=FLOAT, shape=(11350,), dtype=float32)
  array([0., 0., 0., ..., 0., 0., 0.], dtype=float32)
# ---
# name: test_martini[pent/TOPOL2.pdb].8
  AttributeArray(name='is_alpha_carbon', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=BOOLEAN, shape=(11350,), dtype=bool)
  array([ True, False,  True, ..., False, False, False], dtype=bool)
# ---
# name: test_martini[pent/TOPOL2.pdb].9
  AttributeArray(name='is_backbone', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=BOOLEAN, shape=(11350,), dtype=bool)
  array([ True, False,  True, ..., False, False, False], dtype=bool)
# ---
# name: test_martini[pent/prot_ion.tpr]
  AttributeArray(name='.edge_verts', object='NewUniverseObject', mesh='NewUniverseObject', domain=EDGE, type=INT32_2D, shape=(35225, 2), dtype=int32)
  array([[    0,     1],
         [    0,     2],
         [    0,     6],
         ...,
         [11235, 11236],
         [11237, 11238],
         [11238, 11239]], dtype=int32)
# ---
# name: test_martini[pent/prot_ion.tpr].1
  AttributeArray(name='.select_edge', object='NewUniverseObject', mesh='NewUniverseObject', domain=EDGE, type=BOOLEAN, shape=(35225,), dtype=bool)
  array([ True,  True,  True, ...,  True,  True,  True], dtype=bool)
# ---
# name: test_martini[pent/prot_ion.tpr].10
  AttributeArray(name='is_alpha_carbon', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=BOOLEAN, shape=(11350,), dtype=bool)
  array([ True, False,  True, ..., False, False, False], dtype=bool)
# ---
# name: test_martini[pent/prot_ion.tpr].11
  AttributeArray(name='is_backbone', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=BOOLEAN, shape=(11350,), dtype=bool)
  array([ True, False,  True, ..., False, False, False], dtype=bool)
# ---
# name: test_martini[pent/prot_ion.tpr].12
  AttributeArray(name='is_lipid', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=BOOLEAN, shape=(11350,), dtype=bool)
  array([False, False, False, ..., False, False, False], dtype=bool)
# ---
# name: test_martini[pent/prot_ion.tpr].13
  AttributeArray(name='is_nucleic', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=BOOLEAN, shape=(11350,), dtype=bool)
  array([False, False, False, ..., False, False, False], dtype=bool)
# ---
# name: test_martini[pent/prot_ion.tpr].14
  AttributeArray(name='is_peptide', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=BOOLEAN, shape=(11350,), dtype=bool)
  array([ True,  True,  True, ..., False, False, False], dtype=bool)
# ---
# name: test_martini[pent/prot_ion.tpr].15
  AttributeArray(name='is_solvent', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=BOOLEAN, shape=(11350,), dtype=bool)
  array([False, False, False, ..., False, False, False], dtype=bool)
# ---
# name: test_martini[pent/prot_ion.tpr].16
  AttributeArray(name='mass', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=FLOAT, shape=(11350,), dtype=float32)
  array([72., 72., 72., ..., 72., 72., 72.], dtype=float32)
# ---
# name: test_martini[pent/prot_ion.tpr].17
  AttributeArray(name='occupancy', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=FLOAT, shape=(11350,), dtype=float32)
  array([0., 0., 0., ..., 0., 0., 0.], dtype=float32)
# ---
# name: test_martini[pent/prot_ion.tpr].18
  AttributeArray(name='position', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=FLOAT_VECTOR, shape=(11350, 3), dtype=float32)
  array([[16.562    , 13.041    ,  9.823001 ],
         [16.646    , 13.150001 , 10.121001 ],
         [16.619001 , 12.694    ,  9.965    ],
         ...,
         [20.666    ,  4.5930004, 18.026001 ],
         [ 0.522    ,  1.0690001, 11.598001 ],
         [13.804001 , 17.212    , 12.453002 ]], dtype=float32)
# ---
# name: test_martini[pent/prot_ion.tpr].19
  AttributeArray(name='res_id', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([   1,    1,    2, ..., 5408, 5409, 5410], dtype=int32)
# ---
# name: test_martini[pent/prot_ion.tpr].2
  AttributeArray(name='.select_vert', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=BOOLEAN, shape=(11350,), dtype=bool)
  array([ True,  True,  True, ...,  True,  True,  True], dtype=bool)
# ---
# name: test_martini[pent/prot_ion.tpr].20
  AttributeArray(name='res_name', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([12, 12, 12, ..., -1, -1, -1], dtype=int32)
# ---
# name: test_martini[pent/prot_ion.tpr].21
  AttributeArray(name='segid', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([0, 0, 0, ..., 0, 0, 0], dtype=int32)
# ---
# name: test_martini[pent/prot_ion.tpr].22
  AttributeArray(name='sharp_face', object='NewUniverseObject', mesh='NewUniverseObject', domain=FACE, type=BOOLEAN, shape=(0,), dtype=bool)
  array([], dtype=bool)
# ---
# name: test_martini[pent/prot_ion.tpr].23
  AttributeArray(name='ures_id', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([   0,    0,    1, ..., 5407, 5408, 5409], dtype=int32)
# ---
# name: test_martini[pent/prot_ion.tpr].24
  AttributeArray(name='vdw_radii', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=FLOAT, shape=(11350,), dtype=float32)
  array([0.192, 0.18 , 0.192, ..., 0.1  , 0.1  , 0.1  ], dtype=float32)
# ---
# name: test_martini[pent/prot_ion.tpr].3
  AttributeArray(name='atom_id', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([    0,     1,     2, ..., 11347, 11348, 11349], dtype=int32)
# ---
# name: test_martini[pent/prot_ion.tpr].4
  AttributeArray(name='atom_name', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([-1, -1, -1, ..., -1, -1, -1], dtype=int32)
# ---
# name: test_martini[pent/prot_ion.tpr].5
  AttributeArray(name='atom_types', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([12,  3, 10, ...,  9,  9,  9], dtype=int32)
# ---
# name: test_martini[pent/prot_ion.tpr].6
  AttributeArray(name='atomic_number', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([ 5, 16,  5, ..., -1, -1, -1], dtype=int32)
# ---
# name: test_martini[pent/prot_ion.tpr].7
  AttributeArray(name='b_factor', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=FLOAT, shape=(11350,), dtype=float32)
  array([0., 0., 0., ..., 0., 0., 0.], dtype=float32)
# ---
# name: test_martini[pent/prot_ion.tpr].8
  AttributeArray(name='chain_id', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=INT, shape=(11350,), dtype=int32)
  array([0, 0, 0, ..., 0, 0, 0], dtype=int32)
# ---
# name: test_martini[pent/prot_ion.tpr].9
  AttributeArray(name='charge', object='NewUniverseObject', mesh='NewUniverseObject', domain=POINT, type=FLOAT, shape=(11350,), dtype=float32)
  array([1., 0., 0., ..., 1., 1., 1.], dtype=float32)
# ---
